storage: refactor SegmentCompactor to utilize StructuredTaskScope